# cmake-template

./: .clangd  CMakeLists.txt  CMakePresets.json  Knowledge.md  README.md
include/MyLib/: MyLib.hpp
src/: CMakeLists.txt  main.cpp
src/MyLib/: CMakeLists.txt  MyLib.cpp
test/: CMakeLists.txt  test_MyLib.cpp
